--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8888
 spring.cloud.config.server.git.force-pull=true
 
 #服务的git仓库地址
-spring.cloud.config.server.git.uri=http://118.25.26.5:10000/zoe/spring-cloud-config.git
+spring.cloud.config.server.git.uri=http://118.25.26.5:10000/zly/zly-config.git
 
 #配置文件所在的目录
 spring.cloud.config.server.git.searchPaths=respo
